# DDO-tests

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/sebyone/libdaas/ddotest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  daas_jni.cpp
app/src/main/include/: daas.hpp  daas_types.hpp
app/src/main/java/sebyone/libdaas/ddotest/: DaasManager.kt  DaasService.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/sebyone/libdaas/ddotest/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
